[workspace]
resolver = "3"
members = [".", "iepass", "iepass-core"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[workspace.dependencies]
embedded-io = "0.6.1"
iepass-core = { path = "./iepass-core" }
